# feld-vision

./: .gitignore  README.md  pyproject.toml
configs/: baseline_clearml_cuda0.yaml  context_separate_clearml_cuda0.yaml  context_shared_clearml_cuda0.yaml  default.yaml  smoke.yaml  taxonomy_default.yaml
feldvision/: __init__.py  config.py  logging.py  pipeline.py  taxonomy.py
feldvision/cli/: build_index.py  build_splits.py  test.py  train.py
feldvision/data/: __init__.py  augmentation.py  dataset.py  index.py  index_builder.py  sampler.py  splits.py
feldvision/models/: __init__.py  registry.py  segformer.py
feldvision/reconstruct/: __init__.py  sheet.py
feldvision/train/: __init__.py  engine.py  losses.py  metrics.py  optimization.py
scripts/: build_index.py  build_splits.py  run_baseline_clearml_cuda0.sh  run_context_separate_clearml_cuda0.sh  run_context_shared_clearml_cuda0.sh  test.py  train.py
specs/: 00-overview.md  01-chip-index.md  02-splits-and-sampling.md  03-pipeline.md
tests/: test_cli_test.py  test_config.py  test_dataset.py  test_index.py  test_index_builder.py  test_logging.py  test_losses_metrics.py  test_models.py  test_pipeline.py  test_reconstruction.py  test_sampler.py  test_splits.py  test_taxonomy.py  test_training.py
